--- a/404.css
+++ b/404.css
@@ -1,725 +1,35 @@
-.navbar-wrapper {
-  display: contents;
-}
- 
-.navbar-container {
-  width: auto;
-  height: auto;
-  display: flex;
-  position: relative;
-  align-items: flex-start;
-  flex-direction: column;
-}
- 
-.navbar-navbar-interactive {
-  width: 100%;
-  display: flex;
-  align-self: center;
-  align-items: center;
-  padding-top: var(--dl-layout-space-twounits);
-  padding-left: var(--dl-layout-space-threeunits);
-  padding-right: var(--dl-layout-space-threeunits);
-  padding-bottom: var(--dl-layout-space-twounits);
-  justify-content: space-between;
-}
- 
-.navbar-image1 {
-  width: 230px;
-  height: 2rem;
-  transition: 0.3s;
-}
- 
-.navbar-image1:hover {
-  width: 233;
-  cursor: pointer;
-  height: 35;
-}
- 
-.navbar-desktop-menu {
-  flex: 1;
-  display: flex;
-  justify-content: space-between;
-}
- 
-.navbar-links1 {
-  flex: 1;
-  width: 1000px;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: center;
-}
- 
-.navbar-text10 {
-  transition: 0.1s;
-  margin-left: -36px;
-  margin-right: var(--dl-layout-space-unit);
-}
- 
-.navbar-text10:hover {
-  cursor: pointer;
-  font-weight: bold;
-}
- 
-.navbar-text11 {
-  transition: 0.3s;
-  margin-left: var(--dl-layout-space-unit);
-  margin-right: var(--dl-layout-space-unit);
-}
- 
-.navbar-text11:hover {
-  cursor: pointer;
-  font-weight: bold;
-}
- 
-.navbar-text12 {
-  transition: 0.3s;
-  margin-left: var(--dl-layout-space-unit);
-  margin-right: var(--dl-layout-space-unit);
-}
- 
-.navbar-text12:hover {
-  cursor: pointer;
-  font-weight: bold;
-}
- 
-.navbar-buttons1 {
-  gap: var(--dl-layout-space-unit);
-  width: var(--dl-layout-size-xlarge);
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-}
- 
-.navbar-thq-dropdown {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  padding-top: 0px;
-  border-radius: var(--dl-layout-radius-radius2);
-  padding-bottom: 0px;
-}
- 
-.navbar-dropdown-toggle1 {
-  fill: #595959;
-  color: #000000;
-  width: 100%;
-  height: 35px;
-  display: inline-flex;
-  transition: 0.3s;
-  align-items: center;
-  padding-top: var(--dl-layout-space-halfunit);
-  border-color: var(--dl-color-gray-black);
-  border-width: 1px;
-  padding-left: var(--dl-layout-space-halfunit);
-  border-radius: var(--dl-layout-radius-radius8);
-  padding-right: var(--dl-layout-space-halfunit);
-  padding-bottom: var(--dl-layout-space-halfunit);
-}
- 
-.navbar-dropdown-toggle1:hover {
-  background-color: rgba(89, 89, 89, 0.1);
-}
- 
-.navbar-text13 {
-  color: rgb(0, 0, 0);
-  font-size: 14px;
-  align-self: center;
-  font-style: normal;
-  margin-top: 2px;
-  text-align: center;
-  font-weight: 500;
-  margin-right: 4px;
-  vertical-align: middle;
-}
- 
-.navbar-dropdown-arrow {
-  transition: 0.3s;
-}
- 
-.navbar-icon10 {
-  fill: #000000;
-  width: 18px;
-  height: 18px;
-  margin-top: 1px;
-  transition: 0.3s;
-}
- 
-.navbar-dropdown-list {
-  top: var(--dl-layout-space-threeunits);
-  left: 0%;
-  width: max-content;
-  display: none;
-  z-index: 100;
-  position: absolute;
-  min-width: 100%;
-  margin-top: 0px;
-  transition: 0.3s;
-  align-items: stretch;
-  padding-top: 0px;
-  border-color: var(--dl-color-gray-black);
-  border-style: inset;
-  border-width: 1px;
-  margin-right: 0px;
-  border-radius: var(--dl-layout-radius-radius8);
-  padding-right: 0px;
-  flex-direction: column;
-  list-style-type: none;
-  background-color: rgba(89, 89, 89, 0);
-  list-style-position: inside;
-}
- 
-.navbar-dropdown-list:hover {
-  display: none;
-}
- 
-.navbar-dutch {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  border-radius: var(--dl-layout-radius-radius2);
-}
- 
-.navbar-dropdown-toggle2 {
-  fill: #595959;
-  color: #595959;
-  width: 100%;
-  display: inline-flex;
-  transition: 0.3s;
-  align-items: center;
-  padding-top: var(--dl-layout-space-halfunit);
-  padding-left: var(--dl-layout-space-unit);
-  border-radius: var(--dl-layout-radius-radius4);
-  padding-right: var(--dl-layout-space-unit);
-  padding-bottom: var(--dl-layout-space-halfunit);
-}
- 
-.navbar-dropdown-toggle2:hover {
-  background-color: rgba(89, 89, 89, 0.1);
-}
- 
-.navbar-image2 {
-  width: 30px;
-  height: 30px;
-  object-fit: cover;
-}
- 
-.navbar-nederlands {
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  padding-left: var(--dl-layout-space-unit);
-}
- 
-.navbar-french {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  border-radius: var(--dl-layout-radius-radius2);
-}
- 
-.navbar-dropdown-toggle3 {
-  fill: #595959;
-  color: #595959;
-  width: 100%;
-  display: inline-flex;
-  transition: 0.3s;
-  align-items: center;
-  padding-top: var(--dl-layout-space-halfunit);
-  padding-left: var(--dl-layout-space-unit);
-  border-radius: var(--dl-layout-radius-radius4);
-  padding-right: var(--dl-layout-space-unit);
-  padding-bottom: var(--dl-layout-space-halfunit);
-}
- 
-.navbar-dropdown-toggle3:hover {
-  background-color: rgba(89, 89, 89, 0.1);
-}
- 
-.navbar-image3 {
-  width: 30px;
-  height: 30px;
-  object-fit: cover;
-}
- 
-.navbar-text16 {
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  padding-left: var(--dl-layout-space-unit);
-}
- 
-.navbar-english {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  border-radius: var(--dl-layout-radius-radius2);
-}
- 
-.navbar-dropdown-toggle4 {
-  fill: #595959;
-  color: #595959;
-  width: 100%;
-  display: inline-flex;
-  transition: 0.3s;
-  align-items: center;
-  padding-top: var(--dl-layout-space-halfunit);
-  padding-left: var(--dl-layout-space-unit);
-  border-radius: var(--dl-layout-radius-radius4);
-  padding-right: var(--dl-layout-space-unit);
-  padding-bottom: var(--dl-layout-space-halfunit);
-}
- 
-.navbar-dropdown-toggle4:hover {
-  background-color: rgba(89, 89, 89, 0.1);
-}
- 
-.navbar-image4 {
-  width: 30px;
-  height: 30px;
-  object-fit: cover;
-}
- 
-.navbar-text17 {
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  padding-left: var(--dl-layout-space-unit);
-}
- 
-.navbar-german {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  border-radius: var(--dl-layout-radius-radius2);
-}
- 
-.navbar-dropdown-toggle5 {
-  fill: #595959;
-  color: #595959;
-  width: 100%;
-  display: inline-flex;
-  transition: 0.3s;
-  align-items: center;
-  padding-top: var(--dl-layout-space-halfunit);
-  padding-left: var(--dl-layout-space-unit);
-  border-radius: var(--dl-layout-radius-radius4);
-  padding-right: var(--dl-layout-space-unit);
-  padding-bottom: var(--dl-layout-space-halfunit);
-}
- 
-.navbar-dropdown-toggle5:hover {
-  background-color: rgba(89, 89, 89, 0.1);
-}
- 
-.navbar-image5 {
-  width: 30px;
-  height: 30px;
-  object-fit: cover;
-}
- 
-.navbar-text18 {
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  padding-left: var(--dl-layout-space-unit);
-}
- 
-.navbar-register1 {
-  height: 35px;
-  transition: 0.3s;
-  padding-top: var(--dl-layout-space-halfunit);
-  border-width: 1px;
-  padding-left: var(--dl-layout-space-halfunit);
-  border-radius: var(--dl-layout-radius-radius8);
-  padding-right: var(--dl-layout-space-halfunit);
-  padding-bottom: var(--dl-layout-space-halfunit);
-  background-color: rgba(255, 255, 255, 0);
-}
- 
-.navbar-register1:hover {
-  cursor: pointer;
-  background-color: rgba(89, 89, 89, 0.1);
-}
- 
-
- 
-.navbar-burger-menu {
-  display: none;
-}
- 
-.navbar-icon12 {
-  width: var(--dl-layout-size-xsmall);
-  height: var(--dl-layout-size-xsmall);
-}
- 
-.navbar-mobile-menu {
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100vh;
-  display: none;
-  padding: 32px;
-  z-index: 100;
-  position: absolute;
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: #fff;
-}
- 
-.navbar-nav {
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-}
- 
-.navbar-top {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  margin-bottom: var(--dl-layout-space-threeunits);
-  justify-content: space-between;
-}
- 
-.navbar-logo {
-  height: 2rem;
-}
- 
-.navbar-close-menu {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
- 
-.navbar-icon14 {
-  width: var(--dl-layout-size-xsmall);
-  height: var(--dl-layout-size-xsmall);
-}
- 
-.navbar-links2 {
-  flex: 0 0 auto;
-  display: flex;
-  align-self: flex-start;
-  align-items: flex-start;
-  flex-direction: column;
-}
- 
-.navbar-text22 {
-  margin-bottom: var(--dl-layout-space-unit);
-}
- 
-.navbar-text23 {
-  margin-bottom: var(--dl-layout-space-unit);
-}
- 
-.navbar-text24 {
-  margin-bottom: var(--dl-layout-space-unit);
-}
- 
-.navbar-text25 {
-  margin-bottom: var(--dl-layout-space-unit);
-}
- 
-.navbar-text26 {
-  margin-bottom: var(--dl-layout-space-unit);
-}
- 
-.navbar-buttons2 {
-  display: flex;
-  margin-top: var(--dl-layout-space-unit);
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
-}
- 
-.navbar-login {
-  margin-right: var(--dl-layout-space-twounits);
-}
- 
-.navbar-icon16 {
-  width: var(--dl-layout-size-xsmall);
-  height: var(--dl-layout-size-xsmall);
-  margin-right: var(--dl-layout-space-twounits);
-}
- 
-.navbar-icon18 {
-  width: var(--dl-layout-size-xsmall);
-  height: var(--dl-layout-size-xsmall);
-  margin-right: var(--dl-layout-space-twounits);
-}
- 
-.navbar-icon20 {
-  width: var(--dl-layout-size-xsmall);
-  height: var(--dl-layout-size-xsmall);
-}
- 
-.navbarroot-class-name {
-  align-self: center;
-}
- 
-.navbarroot-class-name1 {
-  align-self: center;
-}
- 
-.navbarroot-class-name2 {
-  align-self: center;
-}
- 
-.navbarroot-class-name3 {
-  align-self: center;
-}
- 
-@media(max-width: 1600px) {
-  .navbar-navbar-interactive {
-    width: 100%;
-    align-self: center;
-    justify-content: space-between;
-  }
-  .navbar-links1 {
-    width: auto;
-  }
-  .navbar-text10 {
-    margin-left: var(--dl-layout-space-unit);
-  }
-  .navbarroot-class-name {
-    width: 100%;
-  }
-  .navbarroot-class-name1 {
-    width: 100%;
-  }
-  .navbarroot-class-name2 {
-    width: 100%;
-  }
-  .navbarroot-class-name3 {
-    width: 100%;
-  }
-}
- 
-@media(max-width: 1200px) {
-  .navbar-navbar-interactive {
-    width: 100%;
-    align-self: center;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  .navbar-image1 {
-    margin-right: 0px;
-  }
-  .navbar-links1 {
-    width: auto;
-  }
-  .navbar-text10 {
-    margin-left: var(--dl-layout-space-unit);
-  }
-  .navbar-buttons1 {
-    margin-left: 0px;
-  }
-}
- 
-@media(max-width: 991px) {
-  .navbar-navbar-interactive {
-    align-self: center;
-    justify-content: space-between;
-  }
-}
- 
-@media(max-width: 767px) {
-  .navbar-navbar-interactive {
-    padding-left: var(--dl-layout-space-twounits);
-    padding-right: var(--dl-layout-space-twounits);
-  }
-  .navbar-desktop-menu {
-    display: none;
-  }
-  .navbar-burger-menu {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .navbar-icon12 {
-    width: 24px;
-    height: 24px;
-  }
-  .navbar-text22 {
-    margin-bottom: var(--dl-layout-space-unit);
-  }
-  .navbar-text23 {
-    margin-left: 0;
-    margin-bottom: var(--dl-layout-space-unit);
-  }
-  .navbar-text24 {
-    margin-left: 0;
-    margin-bottom: var(--dl-layout-space-unit);
-  }
-  .navbar-text25 {
-    margin-left: 0;
-    margin-bottom: var(--dl-layout-space-unit);
-  }
-  .navbar-text26 {
-    margin-left: 0;
-    margin-bottom: var(--dl-layout-space-unit);
-  }
-}
- 
-@media(max-width: 479px) {
-  .navbar-navbar-interactive {
-    width: 100%;
-    padding: var(--dl-layout-space-unit);
-  }
-  .navbar-icon12 {
-    width: 24px;
-    height: 24px;
-  }
-  .navbar-mobile-menu {
-    padding: 16px;
-  }
-}
-
-.footer-wrapper {
-  display: contents;
-}
- 
-.footer-footer7 {
-  width: 100%;
-  height: auto;
-  display: flex;
-  overflow: hidden;
-  position: relative;
-  align-items: center;
-  flex-shrink: 0;
-  padding-top: var(--dl-layout-space-unit);
-  flex-direction: column;
-  justify-content: center;
-}
- 
-.footer-max-width {
-  gap: var(--dl-layout-space-threeunits);
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
- 
-.footer-row {
-  display: flex;
-  align-self: stretch;
-  align-items: flex-start;
-  flex-shrink: 0;
-  justify-content: space-between;
-}
- 
-.footer-container {
-  display: flex;
-  align-items: flex-start;
-}
- 
-.footer-text {
-  font-family: "Inter";
-}
- 
-.footer-footer-links {
-  gap: 24px;
-  display: flex;
-  align-items: flex-start;
-}
- 
-.footer-social-links {
-  gap: var(--dl-layout-space-twounits);
-  display: flex;
-  align-self: center;
-  align-items: flex-start;
-  flex-direction: row;
-}
- 
-
- 
-.footerroot-class-name1 {
-  padding-top: 0px;
-}
- 
-
- 
-@media(max-width: 991px) {
-  .footer-social-links {
-    align-self: center;
-  }
-}
- 
-@media(max-width: 767px) {
-  .footer-row {
-    gap: var(--dl-layout-space-oneandhalfunits);
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-  }
-  .footer-social-links {
-    align-self: center;
-  }
-}
- 
-@media(max-width: 479px) {
-  .footer-max-width {
-    gap: var(--dl-layout-space-oneandhalfunits);
-  }
-  .footer-footer-links {
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-  }
-  .footer-social-links {
-    align-items: center;
-    justify-content: center;
-  }
-}
-
-.error404-container1 {
+.not-found-container {
   width: 100%;
   display: flex;
   overflow: auto;
   min-height: 100vh;
-  align-items: flex-start;
-  flex-direction: column;
-  justify-content: flex-start;
-  background-image: linear-gradient(180deg, rgb(189, 195, 199) 0.00%,rgb(42, 42, 42) 100.00%);
-}
- 
-.error404-container2 {
-  flex: 1;
-  width: 80%;
-  height: 100%;
-  display: flex;
-  align-self: center;
-  margin-top: 0px;
   align-items: center;
   flex-direction: column;
   justify-content: center;
 }
- 
-.error404-text {
-  font-size: 50px;
-  align-self: center;
-  font-family: "Inter";
-  padding-top: 0px;
-  letter-spacing: 5px;
+.not-found-container1 {
+  display: flex;
+  position: relative;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
- 
-@media(max-width: 1600px) {
-  .error404-container1 {
-    background-image: linear-gradient(180deg, rgb(189, 195, 199) 0.00%,rgb(189, 195, 199) 0.00%,rgb(42, 42, 42) 100.00%);
-  }
-  .error404-container2 {
-    width: 80%;
-    padding: var(--dl-layout-space-unit);
-    align-self: center;
-    margin-top: var(--dl-layout-space-fiveunits);
-    align-items: center;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-bottom: var(--dl-layout-space-fiveunits);
-    justify-content: center;
-  }
-  .error404-text {
-    width: auto;
-    align-self: center;
-    padding-top: 0px;
-  }
+.not-found-text1 {
+  color: rgb(38, 38, 38);
+  font-size: 252px;
+  margin-top: -20px;
+  font-weight: 900;
+  margin-bottom: -20px;
+  letter-spacing: -20px;
+}
+.not-found-container2 {
+  width: 421px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+.not-found-text2 {
+  text-align: center;
+  font-weight: 400;
 }
