--- a/components/navbar.css
+++ b/components/navbar.css
@@ -6,38 +6,29 @@
   align-items: flex-start;
   flex-direction: column;
 }
- 
 .navbar-navbar-interactive {
   width: 100%;
   display: flex;
   align-self: center;
   align-items: center;
-  padding-top: var(--dl-layout-space-twounits);
-  padding-left: var(--dl-layout-space-threeunits);
-  padding-right: var(--dl-layout-space-threeunits);
-  padding-bottom: var(--dl-layout-space-twounits);
+  padding-top: var(--dl-space-space-twounits);
+  padding-left: var(--dl-space-space-threeunits);
+  padding-right: var(--dl-space-space-threeunits);
+  padding-bottom: var(--dl-space-space-twounits);
   justify-content: space-between;
 }
- 
-.navbar-image1 {
+.navbar-image {
   width: 230px;
   height: 2rem;
   transition: 0.3s;
 }
- 
-.navbar-image1:hover {
-  width: 233;
-  cursor: pointer;
-  height: 35;
-}
- 
+
 .navbar-desktop-menu {
   flex: 1;
   display: flex;
   justify-content: space-between;
 }
- 
-.navbar-links1 {
+.navbar-links {
   flex: 1;
   width: 1000px;
   display: flex;
@@ -45,137 +36,134 @@
   flex-direction: row;
   justify-content: center;
 }
- 
-.navbar-text10 {
-  transition: 0.1s;
+.navbar-text {
+  transition: 0.3s;
   margin-left: -36px;
-  margin-right: var(--dl-layout-space-unit);
+  margin-right: var(--dl-space-space-unit);
 }
- 
-.navbar-text10:hover {
-  cursor: pointer;
-  font-weight: bold;
-}
- 
-.navbar-text11 {
+
+.navbar-text01 {
   transition: 0.3s;
-  margin-left: var(--dl-layout-space-unit);
-  margin-right: var(--dl-layout-space-unit);
+  margin-left: var(--dl-space-space-unit);
+  margin-right: var(--dl-space-space-unit);
 }
- 
-.navbar-text11:hover {
-  cursor: pointer;
-  font-weight: bold;
-}
- 
-.navbar-text12 {
+
+.navbar-text02 {
   transition: 0.3s;
-  margin-left: var(--dl-layout-space-unit);
-  margin-right: var(--dl-layout-space-unit);
+  margin-left: var(--dl-space-space-unit);
+  margin-right: var(--dl-space-space-unit);
 }
- 
-.navbar-text12:hover {
-  cursor: pointer;
-  font-weight: bold;
-}
- 
-.navbar-buttons1 {
-  gap: var(--dl-layout-space-unit);
-  width: var(--dl-layout-size-xlarge);
+
+.navbar-buttons {
+  gap: var(--dl-space-space-unit);
+  width: var(--dl-size-size-xlarge);
   display: flex;
   align-items: center;
   flex-direction: row;
 }
- 
+.navbar-register {
+  transition: 0.3s;
+  border-width: 1px;
+  border-radius: var(--dl-radius-radius-radius8);
+  background-color: rgba(255, 255, 255, 0);
+}
+
 .navbar-thq-dropdown {
   cursor: pointer;
   display: inline-block;
   position: relative;
-  padding-top: 0px;
-  border-radius: var(--dl-layout-radius-radius2);
-  padding-bottom: 0px;
+  border-radius: var(--dl-radius-radius-radius2);
 }
- 
-.navbar-dropdown-toggle1 {
+.navbar-dropdown-toggle {
   fill: #595959;
   color: #000000;
   width: 100%;
-  height: 35px;
   display: inline-flex;
   transition: 0.3s;
   align-items: center;
-  padding-top: var(--dl-layout-space-halfunit);
+  padding-top: var(--dl-space-space-halfunit);
   border-color: var(--dl-color-gray-black);
   border-width: 1px;
-  padding-left: var(--dl-layout-space-halfunit);
-  border-radius: var(--dl-layout-radius-radius8);
-  padding-right: var(--dl-layout-space-halfunit);
-  padding-bottom: var(--dl-layout-space-halfunit);
+  padding-left: var(--dl-space-space-halfunit);
+  border-radius: var(--dl-radius-radius-radius8);
+  padding-right: var(--dl-space-space-halfunit);
+  padding-bottom: var(--dl-space-space-halfunit);
 }
- 
-.navbar-dropdown-toggle1:hover {
-  background-color: rgba(89, 89, 89, 0.1);
-}
- 
-.navbar-text13 {
+
+.navbar-text03 {
   color: rgb(0, 0, 0);
   font-size: 14px;
-  align-self: center;
   font-style: normal;
-  margin-top: 2px;
   text-align: center;
   font-weight: 500;
   margin-right: 4px;
   vertical-align: middle;
 }
- 
 .navbar-dropdown-arrow {
   transition: 0.3s;
 }
- 
-.navbar-icon10 {
+.navbar-icon {
   fill: #000000;
   width: 18px;
   height: 18px;
-  margin-top: 1px;
   transition: 0.3s;
 }
- 
 .navbar-dropdown-list {
-  top: var(--dl-layout-space-threeunits);
-  left: 0%;
+  top: 0;
+  right: 100%;
   width: max-content;
   display: none;
   z-index: 100;
   position: absolute;
   min-width: 100%;
-  margin-top: 0px;
   transition: 0.3s;
   align-items: stretch;
-  padding-top: 0px;
-  border-color: var(--dl-color-gray-black);
-  border-style: inset;
+  border-color: #D9D9D9;
   border-width: 1px;
-  margin-right: 0px;
-  border-radius: var(--dl-layout-radius-radius8);
-  padding-right: 0px;
+  border-radius: var(--dl-radius-radius-radius4);
   flex-direction: column;
   list-style-type: none;
-  background-color: rgba(89, 89, 89, 0);
+  background-color: var(--dl-color-gray-white);
   list-style-position: inside;
 }
- 
-.navbar-dropdown-list:hover {
-  display: none;
-}
- 
-.navbar-dutch {
+.navbar-dropdown {
   cursor: pointer;
   display: inline-block;
   position: relative;
-  border-radius: var(--dl-layout-radius-radius2);
+  border-radius: var(--dl-radius-radius-radius2);
 }
- 
+.navbar-dropdown-toggle1 {
+  fill: #595959;
+  color: #595959;
+  width: 100%;
+  display: inline-flex;
+  transition: 0.3s;
+  align-items: center;
+  padding-top: var(--dl-space-space-halfunit);
+  padding-left: var(--dl-space-space-unit);
+  border-radius: var(--dl-radius-radius-radius4);
+  padding-right: var(--dl-space-space-unit);
+  padding-bottom: var(--dl-space-space-halfunit);
+}
+.navbar-dropdown-toggle1:hover {
+  fill: #fff;
+  color: #fff;
+  background-color: #595959;
+}
+.navbar-text06 {
+  width: 100%;
+  cursor: pointer;
+  display: flex;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+}
+.navbar-dropdown1 {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  border-radius: var(--dl-radius-radius-radius2);
+}
 .navbar-dropdown-toggle2 {
   fill: #595959;
   color: #595959;
@@ -183,37 +171,31 @@
   display: inline-flex;
   transition: 0.3s;
   align-items: center;
-  padding-top: var(--dl-layout-space-halfunit);
-  padding-left: var(--dl-layout-space-unit);
-  border-radius: var(--dl-layout-radius-radius4);
-  padding-right: var(--dl-layout-space-unit);
-  padding-bottom: var(--dl-layout-space-halfunit);
+  padding-top: var(--dl-space-space-halfunit);
+  padding-left: var(--dl-space-space-unit);
+  border-radius: var(--dl-radius-radius-radius4);
+  padding-right: var(--dl-space-space-unit);
+  padding-bottom: var(--dl-space-space-halfunit);
 }
- 
 .navbar-dropdown-toggle2:hover {
-  background-color: rgba(89, 89, 89, 0.1);
+  fill: #fff;
+  color: #fff;
+  background-color: #595959;
 }
- 
-.navbar-image2 {
-  width: 30px;
-  height: 30px;
-  object-fit: cover;
-}
- 
-.navbar-nederlands {
+.navbar-text07 {
+  width: 100%;
+  cursor: pointer;
+  display: flex;
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
-  padding-left: var(--dl-layout-space-unit);
 }
- 
-.navbar-french {
+.navbar-dropdown2 {
   cursor: pointer;
   display: inline-block;
   position: relative;
-  border-radius: var(--dl-layout-radius-radius2);
+  border-radius: var(--dl-radius-radius-radius2);
 }
- 
 .navbar-dropdown-toggle3 {
   fill: #595959;
   color: #595959;
@@ -221,134 +203,32 @@
   display: inline-flex;
   transition: 0.3s;
   align-items: center;
-  padding-top: var(--dl-layout-space-halfunit);
-  padding-left: var(--dl-layout-space-unit);
-  border-radius: var(--dl-layout-radius-radius4);
-  padding-right: var(--dl-layout-space-unit);
-  padding-bottom: var(--dl-layout-space-halfunit);
+  padding-top: var(--dl-space-space-halfunit);
+  padding-left: var(--dl-space-space-unit);
+  border-radius: var(--dl-radius-radius-radius4);
+  padding-right: var(--dl-space-space-unit);
+  padding-bottom: var(--dl-space-space-halfunit);
 }
- 
 .navbar-dropdown-toggle3:hover {
-  background-color: rgba(89, 89, 89, 0.1);
+  fill: #fff;
+  color: #fff;
+  background-color: #595959;
 }
- 
-.navbar-image3 {
-  width: 30px;
-  height: 30px;
-  object-fit: cover;
-}
- 
-.navbar-text16 {
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  padding-left: var(--dl-layout-space-unit);
-}
- 
-.navbar-english {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  border-radius: var(--dl-layout-radius-radius2);
-}
- 
-.navbar-dropdown-toggle4 {
-  fill: #595959;
-  color: #595959;
+.navbar-text08 {
   width: 100%;
-  display: inline-flex;
-  transition: 0.3s;
-  align-items: center;
-  padding-top: var(--dl-layout-space-halfunit);
-  padding-left: var(--dl-layout-space-unit);
-  border-radius: var(--dl-layout-radius-radius4);
-  padding-right: var(--dl-layout-space-unit);
-  padding-bottom: var(--dl-layout-space-halfunit);
-}
- 
-.navbar-dropdown-toggle4:hover {
-  background-color: rgba(89, 89, 89, 0.1);
-}
- 
-.navbar-image4 {
-  width: 30px;
-  height: 30px;
-  object-fit: cover;
-}
- 
-.navbar-text17 {
+  cursor: pointer;
+  display: flex;
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
-  padding-left: var(--dl-layout-space-unit);
 }
- 
-.navbar-german {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  border-radius: var(--dl-layout-radius-radius2);
-}
- 
-.navbar-dropdown-toggle5 {
-  fill: #595959;
-  color: #595959;
-  width: 100%;
-  display: inline-flex;
-  transition: 0.3s;
-  align-items: center;
-  padding-top: var(--dl-layout-space-halfunit);
-  padding-left: var(--dl-layout-space-unit);
-  border-radius: var(--dl-layout-radius-radius4);
-  padding-right: var(--dl-layout-space-unit);
-  padding-bottom: var(--dl-layout-space-halfunit);
-}
- 
-.navbar-dropdown-toggle5:hover {
-  background-color: rgba(89, 89, 89, 0.1);
-}
- 
-.navbar-image5 {
-  width: 30px;
-  height: 30px;
-  object-fit: cover;
-}
- 
-.navbar-text18 {
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  padding-left: var(--dl-layout-space-unit);
-}
- 
-.navbar-register1 {
-  height: 35px;
-  transition: 0.3s;
-  padding-top: var(--dl-layout-space-halfunit);
-  border-width: 1px;
-  padding-left: var(--dl-layout-space-halfunit);
-  border-radius: var(--dl-layout-radius-radius8);
-  padding-right: var(--dl-layout-space-halfunit);
-  padding-bottom: var(--dl-layout-space-halfunit);
-  background-color: rgba(255, 255, 255, 0);
-}
- 
-.navbar-register1:hover {
-  cursor: pointer;
-  background-color: rgba(89, 89, 89, 0.1);
-}
- 
-
- 
 .navbar-burger-menu {
   display: none;
 }
- 
-.navbar-icon12 {
-  width: var(--dl-layout-size-xsmall);
-  height: var(--dl-layout-size-xsmall);
+.navbar-icon02 {
+  width: var(--dl-size-size-xsmall);
+  height: var(--dl-size-size-xsmall);
 }
- 
 .navbar-mobile-menu {
   top: 0px;
   left: 0px;
@@ -362,135 +242,92 @@
   justify-content: space-between;
   background-color: #fff;
 }
- 
 .navbar-nav {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
 }
- 
 .navbar-top {
   width: 100%;
   display: flex;
   align-items: center;
-  margin-bottom: var(--dl-layout-space-threeunits);
+  margin-bottom: var(--dl-space-space-threeunits);
   justify-content: space-between;
 }
- 
 .navbar-logo {
   height: 2rem;
 }
- 
 .navbar-close-menu {
   display: flex;
   align-items: center;
   justify-content: center;
 }
- 
-.navbar-icon14 {
-  width: var(--dl-layout-size-xsmall);
-  height: var(--dl-layout-size-xsmall);
+.navbar-icon04 {
+  width: var(--dl-size-size-xsmall);
+  height: var(--dl-size-size-xsmall);
 }
- 
-.navbar-links2 {
+.navbar-links1 {
   flex: 0 0 auto;
   display: flex;
   align-self: flex-start;
   align-items: flex-start;
   flex-direction: column;
 }
- 
-.navbar-text22 {
-  margin-bottom: var(--dl-layout-space-unit);
+.navbar-text09 {
+  margin-bottom: var(--dl-space-space-unit);
 }
- 
-.navbar-text23 {
-  margin-bottom: var(--dl-layout-space-unit);
+.navbar-text10 {
+  margin-bottom: var(--dl-space-space-unit);
 }
- 
-.navbar-text24 {
-  margin-bottom: var(--dl-layout-space-unit);
+.navbar-text11 {
+  margin-bottom: var(--dl-space-space-unit);
 }
- 
-.navbar-text25 {
-  margin-bottom: var(--dl-layout-space-unit);
+.navbar-text12 {
+  margin-bottom: var(--dl-space-space-unit);
 }
- 
-.navbar-text26 {
-  margin-bottom: var(--dl-layout-space-unit);
+.navbar-text13 {
+  margin-bottom: var(--dl-space-space-unit);
 }
- 
-.navbar-buttons2 {
+.navbar-buttons1 {
   display: flex;
-  margin-top: var(--dl-layout-space-unit);
+  margin-top: var(--dl-space-space-unit);
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
 }
- 
 .navbar-login {
-  margin-right: var(--dl-layout-space-twounits);
+  margin-right: var(--dl-space-space-twounits);
 }
- 
-.navbar-icon16 {
-  width: var(--dl-layout-size-xsmall);
-  height: var(--dl-layout-size-xsmall);
-  margin-right: var(--dl-layout-space-twounits);
+.navbar-icon06 {
+  width: var(--dl-size-size-xsmall);
+  height: var(--dl-size-size-xsmall);
+  margin-right: var(--dl-space-space-twounits);
 }
- 
-.navbar-icon18 {
-  width: var(--dl-layout-size-xsmall);
-  height: var(--dl-layout-size-xsmall);
-  margin-right: var(--dl-layout-space-twounits);
+.navbar-icon08 {
+  width: var(--dl-size-size-xsmall);
+  height: var(--dl-size-size-xsmall);
+  margin-right: var(--dl-space-space-twounits);
 }
- 
-.navbar-icon20 {
-  width: var(--dl-layout-size-xsmall);
-  height: var(--dl-layout-size-xsmall);
+.navbar-icon10 {
+  width: var(--dl-size-size-xsmall);
+  height: var(--dl-size-size-xsmall);
 }
- 
-.navbarroot-class-name {
+.navbar-root-class-name {
   align-self: center;
 }
- 
-.navbarroot-class-name1 {
-  align-self: center;
-}
- 
-.navbarroot-class-name2 {
-  align-self: center;
-}
- 
-.navbarroot-class-name3 {
-  align-self: center;
-}
- 
 @media(max-width: 1600px) {
   .navbar-navbar-interactive {
     width: 100%;
     align-self: center;
     justify-content: space-between;
   }
-  .navbar-links1 {
+  .navbar-links {
     width: auto;
   }
-  .navbar-text10 {
-    margin-left: var(--dl-layout-space-unit);
-  }
-  .navbarroot-class-name {
-    width: 100%;
-  }
-  .navbarroot-class-name1 {
-    width: 100%;
-  }
-  .navbarroot-class-name2 {
-    width: 100%;
-  }
-  .navbarroot-class-name3 {
+  .navbar-root-class-name {
     width: 100%;
   }
 }
- 
 @media(max-width: 1200px) {
   .navbar-navbar-interactive {
     width: 100%;
@@ -498,31 +335,29 @@
     flex-direction: row;
     justify-content: space-between;
   }
-  .navbar-image1 {
+  .navbar-image {
     margin-right: 0px;
   }
-  .navbar-links1 {
+  .navbar-links {
     width: auto;
   }
-  .navbar-text10 {
-    margin-left: var(--dl-layout-space-unit);
+  .navbar-text {
+    margin-left: var(--dl-space-space-unit);
   }
-  .navbar-buttons1 {
+  .navbar-buttons {
     margin-left: 0px;
   }
 }
- 
 @media(max-width: 991px) {
   .navbar-navbar-interactive {
     align-self: center;
     justify-content: space-between;
   }
 }
- 
 @media(max-width: 767px) {
   .navbar-navbar-interactive {
-    padding-left: var(--dl-layout-space-twounits);
-    padding-right: var(--dl-layout-space-twounits);
+    padding-left: var(--dl-space-space-twounits);
+    padding-right: var(--dl-space-space-twounits);
   }
   .navbar-desktop-menu {
     display: none;
@@ -532,37 +367,36 @@
     align-items: center;
     justify-content: center;
   }
-  .navbar-icon12 {
+  .navbar-icon02 {
     width: 24px;
     height: 24px;
   }
-  .navbar-text22 {
-    margin-bottom: var(--dl-layout-space-unit);
+  .navbar-text09 {
+    margin-bottom: var(--dl-space-space-unit);
   }
-  .navbar-text23 {
+  .navbar-text10 {
     margin-left: 0;
-    margin-bottom: var(--dl-layout-space-unit);
+    margin-bottom: var(--dl-space-space-unit);
   }
-  .navbar-text24 {
+  .navbar-text11 {
     margin-left: 0;
-    margin-bottom: var(--dl-layout-space-unit);
+    margin-bottom: var(--dl-space-space-unit);
   }
-  .navbar-text25 {
+  .navbar-text12 {
     margin-left: 0;
-    margin-bottom: var(--dl-layout-space-unit);
+    margin-bottom: var(--dl-space-space-unit);
   }
-  .navbar-text26 {
+  .navbar-text13 {
     margin-left: 0;
-    margin-bottom: var(--dl-layout-space-unit);
+    margin-bottom: var(--dl-space-space-unit);
   }
 }
- 
 @media(max-width: 479px) {
   .navbar-navbar-interactive {
     width: 100%;
-    padding: var(--dl-layout-space-unit);
+    padding: var(--dl-space-space-unit);
   }
-  .navbar-icon12 {
+  .navbar-icon02 {
     width: 24px;
     height: 24px;
   }
